--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,3 @@
-@import './vars';
-@import './colors';
-@import './functions';
-@import './placeholders';
-@import './helpers';
 @import './global';
 @import './global-navigation';
+@import './site-navigation';
