--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,4 @@
+@import 'functions';
 html, body {
   margin: 0;
   padding: 0;
@@ -6,6 +7,7 @@ html, body {
 
 html {
   box-sizing: border-box;
+  @include font();
 }
 
 *, *:before, *:after {
