--- a/src/styles/site-navigation.scss
+++ b/src/styles/site-navigation.scss
@@ -5,12 +5,12 @@
 .site-navigation {
   @include font();
 
-  border-bottom: 1px solid $gray-2;
-  width: 100%;
-  display: flex;
   background: $white;
+  border-bottom: 1px solid $gray-2;
+  display: flex;
   height: rem($site-nav-height);
   padding: 6px 16px;
+  width: 100%;
 }
 
 .ernie-ball-logo {
@@ -25,57 +25,124 @@
 .site-navigation__center {
   @include font-bold();
 
-  text-transform: uppercase;
-  font-size: rem(11);
+  align-items: center;
   display: flex;
   flex: 1;
+  font-size: rem(11);
   justify-content: center;
-  align-items: center;
+  text-transform: uppercase;
 }
 
 .site-navigation__list {
-  display: flex;
-  list-style-type: none;
-  justify-items: center;
   align-items: center;
+  display: flex;
+  height: 100%;
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  height: 100%;
+  justify-items: center;
 }
+
 .site-navigation__item {
   display: flex;
   height: 100%;
   position: relative;
 
   &:hover:after {
-    content: '';
     background: $ernieBallPrimary;
     bottom: -6px;
-    width: 100%;
+    content: '';
     height: 6px;
     left: 0;
-    right: 0;
     position: absolute;
+    right: 0;
+    width: 100%;
   }
 }
 
 .site-navigation__link {
-  text-decoration: none;
-  padding: 0 16px;
-  color: $black;
-  height: 100%;
-  display: flex;
   align-items: center;
+  color: $black;
+  display: flex;
+  height: 100%;
   justify-content: center;
+  padding: 0 16px;
   position: relative;
-
-  &:hover {
-  }
-
-
+  text-decoration: none;
 }
 
 .site-navigation__right {
   display: flex;
   flex-basis: 150px;
+  justify-content: flex-end;
+}
+
+.site-navigation__list-alt {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  justify-items: center;
+}
+
+.site-navigation__item-alt {
+  display: flex;
+  height: 100%;
+  position: relative;
+
+  &:hover:after {
+  }
+}
+
+.site-navigation__home {
+  align-items: center;
+  background: none;
+  border: 0;
+  color: $black;
+  cursor: pointer;
+  display: flex;
+  height: 100%;
+  position: relative;
+  text-decoration: none;
+}
+
+.site-navigation__button {
+  align-items: center;
+  background: none;
+  border: 0;
+  color: $black;
+  cursor: pointer;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding: 0 16px;
+  position: relative;
+  text-decoration: none;
+}
+
+.site-navigation__button-badge {
+  align-items: center;
+  background: $ernieBallPrimary;
+  border-radius: 20px;
+  bottom: 6px;
+  display: flex;
+  font-size: 11px;
+  height: 20px;
+  justify-content: center;
+  position: absolute;
+  right: 6px;
+  text-align: center;
+  width: 20px;
+
+  .site-navigation__button-badge-count {
+    align-items: center;
+    color: $white;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+    @include font-bold();
+  }
 }
