--- a/src/styles/flyout-nav.scss
+++ b/src/styles/flyout-nav.scss
@@ -5,19 +5,27 @@
 $column-gutter-1: 40;
 $column-gutter-2: $column-gutter-1 * 2;
 $column-width: 210;
+$font-size: 12;
 
 // Desktop
 .flyout__desktop-nav {
-  background: $white;
-  border-bottom: 1px solid $gray-2;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  height: rem($site-nav-flyout-height);
-  left: 0;
-  padding: rem(30) 0;
-  position: absolute;
-  right: 0;
-  top: rem($global-nav-height + $site-nav-height);
-  width: 100%;
+  display: none;
+  visibility: hidden;
+
+  @include bp(sm) {
+    background: $white;
+    border-bottom: 1px solid $gray-2;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    display: block;
+    height: rem($site-nav-flyout-height);
+    left: 0;
+    padding: rem(30) 0;
+    position: absolute;
+    right: 0;
+    top: rem($global-nav-height + $site-nav-height);
+    visibility: visible;
+    width: 100%;
+  }
 }
 
 .flyout__container {
@@ -48,7 +56,67 @@ $column-width: 210;
   }
 
   &.flyout__column-stamp {
-    margin-right: $column-gutter-2;
+    margin-left: rem($column-gutter-1);
+    margin-right: rem($column-gutter-2);
+    &:before {
+      background: transparent;
+      bottom: 0;
+      content: '';
+
+      left: rem(-20);
+      position: absolute;
+      top: 0;
+      width: 1px;
+    }
+  }
+}
+
+.flyout__group {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.secondary-list-item--flat {
+  color: $black;
+  display: block;
+  font-size: rem($font-size);
+  font-weight: 700;
+  line-height: 2;
+  margin-top: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  &:hover {
+    color: $ernieBallPrimary;
+  }
+}
+
+.secondary-list-item {
+  color: $black;
+  display: block;
+  font-size: rem($font-size);
+  font-weight: 700;
+  line-height: 2;
+  margin-top: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  &:hover {
+    color: $ernieBallPrimary;
+  }
+}
+
+.tertiary-list-item {
+  color: $black-1;
+  font-size: rem($font-size);
+  font-weight: 500;
+  line-height: 1.3;
+  text-decoration: none;
+  text-transform: capitalize;
+
+  &:hover {
+    color: $ernieBallPrimary;
   }
 }
 
