--- a/src/styles/flyout-nav.scss
+++ b/src/styles/flyout-nav.scss
@@ -12,11 +12,14 @@ $font-size: 12;
   display: none;
   visibility: hidden;
 
+  &.active {
+    display: block;
+  }
+
   @include bp(sm) {
     background: $white;
     border-bottom: 1px solid $gray-2;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    display: block;
     height: rem($site-nav-flyout-height);
     left: 0;
     padding: rem(30) 0;
@@ -30,10 +33,15 @@ $font-size: 12;
 
 .flyout__container {
   align-items: center;
-  display: flex;
   height: 100%;
   justify-content: center;
   margin: 0 auto;
+  display: none;
+
+
+  &.active {
+    display: flex;
+  }
 }
 
 .flyout__column {
@@ -110,7 +118,7 @@ $font-size: 12;
 .tertiary-list-item {
   color: $black-1;
   font-size: rem($font-size);
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.3;
   text-decoration: none;
   text-transform: capitalize;
@@ -118,6 +126,10 @@ $font-size: 12;
   &:hover {
     color: $ernieBallPrimary;
   }
+}
+
+.tertiary-list-item--all {
+  font-weight: 500;
 }
 
 // Mobile
