- Added active state to primary navigation.

--- a/src/styles/site-navigation.scss
+++ b/src/styles/site-navigation.scss
@@ -48,7 +48,7 @@
   height: 100%;
   position: relative;
 
-  &:hover:after {
+  &.active:after {
     background: $ernieBallPrimary;
     bottom: -6px;
     content: '';
