WIP refactor for mobile navigation.

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,6 +2,7 @@ $global-nav-height: 40;
 $site-nav-height: 66;
 $site-nav-flyout-height: 550;
 $site-nav-item-width: 85;
-
+$close-overlay-z: 5;
+$mobile-menu-z: 10;
 
 
