--- a/src/styles/flyout-nav-m.scss
+++ b/src/styles/flyout-nav-m.scss
@@ -29,10 +29,8 @@ $font-size: 12;
 
 .flyout__mobile-nav {
   background: $gray-2;
-  border-left: 1px solid $gray-1;
   display: flex;
   height: 100vh;
-  overflow: hidden;
   position: fixed;
   right: 0;
   top: 0;
@@ -49,6 +47,7 @@ $font-size: 12;
 
 .flyout__primary-nav {
   background: $white-off;
+  border-left: 1px solid $gray-1;
   height: 100%;
   position: fixed;
   transition: all cubic-bezier(0.4, 0.0, 0.2, 1) 198ms;
@@ -84,6 +83,7 @@ $font-size: 12;
   display: flex;
   height: 105px;
   justify-content: center;
+  width: 42%;
 }
 
 .flyout__mobile-nav-item-label {
@@ -129,7 +129,12 @@ $font-size: 12;
   align-items: center;
   display: flex;
   justify-content: center;
-  padding-left: 20px;
-  transform: rotate(180deg);
+  padding: 0 0 0 20px;
   transform-origin: 50% 50%;
+
+  &.left-icon {
+    padding: 0 0 0 20px;
+
+    transform: rotate(180deg);
+  }
 }
