--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,5 +4,7 @@ $site-nav-flyout-height: 550;
 $site-nav-item-width: 85;
 $close-overlay-z: 5;
 $mobile-menu-z: 10;
+$font-size: 16;
+$font-size-m: $font-size - 2;
 
 
