--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import 'functions';
+
 html, body {
   margin: 0;
   padding: 0;
@@ -8,8 +9,14 @@ html, body {
 html {
   box-sizing: border-box;
   @include font();
+  height: 200%;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
+}
+
+.fixed-container {
+  position: fixed;
+  width: 100%;
 }
