--- a/src/styles/flyout-nav-m.scss
+++ b/src/styles/flyout-nav-m.scss
@@ -92,8 +92,13 @@ $font-size: 12;
     margin-top: -13px;
     position: absolute;
     top: 50%;
+    cursor: pointer;
+    transform: rotate(0deg);
+    right: auto;
   }
+
   .left-icon {
+    cursor: pointer;
     left: auto;
     right: 0;
   }
@@ -141,6 +146,7 @@ $font-size: 12;
   height: 100%;
   text-decoration: none;
   width: 100%;
+  position: relative;
   &:hover {
     background-color: $gray-2;
   }
@@ -152,6 +158,12 @@ $font-size: 12;
   justify-content: center;
   padding: 0 0 0 20px;
   transform-origin: 50% 50%;
+  transform: rotate(180deg);
+  cursor: pointer;
+  position: absolute;
+  right: 58%;
+  top: 12px;
+
 
   &.left-icon {
     padding: 0 0 0 20px;
